Fix edit profile page drag/color, fix mobile header links (were too light)

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -1,6 +1,8 @@
 /* profile page layout */
 
 /* Profile container */
+
+
 .profile {
   margin: 75px 0px;
 }
@@ -241,6 +243,10 @@ label {
 }
 
 /* user settings */
+
+.editprofilewrapper {
+  background: #233E47;
+}
 
 #editprofilecontainer {
   margin-top: 53.2px;
